Added Pagination and LikeCounts , Like Status on Get All Posts

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,3 +13,9 @@
     //"DefaultConnection": "Data Source=.;Initial Catalog=dbBookMySkill;Integrated Security=True;"
   }
 }
+
+
+//ServerName: 43.204.37.101
+//Authentication: Sql Server Authentication
+//Login: sa
+//Password :cId1NzffgIg
